# f1000

./: Cargo.toml  README.md  database_schema.sql  env.example  session.session  test_config  test_session.rs
.github/workflows/: rust-clippy.yml
src/: config.rs  main.rs  telegram.rs
src/db/: connection.rs  mod.rs  models.rs
src/telegram/: message_processor.rs
